--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NyanSpace</title>
+
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+
+    <meta name="msapplication-square70x70logo" content="/ms-icon-70x70.png" />
+    <meta
+      name="msapplication-square144x144logo"
+      content="/ms-icon-144x144.png"
+    />
+    <meta
+      name="msapplication-square150x150logo"
+      content="/ms-icon-150x150.png"
+    />
+    <meta
+      name="msapplication-square310x310logo"
+      content="/ms-icon-310x310.png"
+    />
   </head>
   <body>
     <div id="root"></div>
